	- fixed security exploit in FormsAuthentication where not unsetting the session secret during signout
	- fixed security exploit in FormsAuthentication where not using a timestamp to seed the secret
	- fixed security exploit where session not timing out
	- changed WebServiceAuthentication is now stateless, (use FormsAuthentication for SOAP web services)

version 6.4.15-beta - 02.19.13
	- added command line package manager "get" (beta)
	- fixed bug in model make script when not reporting correct error message if table doesn't exist
	- changed make script no longer needs /app/config/make/config.php
	- added /app/config/dev.xml
	- added event LoginFormSubmitEvent
	- added RESTWebService
	- changed WebServiceAuthentication
	- fixed bug in WebApplication where replacing PHP session id even when cookieless session is false
	- fixed bug in SOAPWebService::handle() where returning the handle
	- fixed bug in model make script no longer determines many to many relationships
	- fixed bug in migrate when migrating down from first version
	- fixed bug in TestCastBase when building a new schema
	- fixed bug in Model make script where not throwing Exception for missing argument
	- fixed bug in Deploy script when deploying via SCP on linux

version 6.4.14-beta - 01.21.13
	- fixed bug in GridView::filters when setting filter values
	- fixed bug in SSHClient where not specifying port correctly
	- fixed bug in migrations where migrate was failing if no migrations were defined
	- changed GridView::filters to support associative arrays
	- added support for js scripts in themes
	- fixed bug in ColumnCompare where string sort wasn't trimming
	- fixed bug in ColumnCompare where array contains nulls
	- fixed bug in GridView where dropdown filters weren't filtering correctly
	- fixed bug where debug panel opening on load without cookie set
	- changed plugin assets now live with plugin class files

version 6.4.13-beta - 11.16.12