@@ -67,29 +67,26 @@
 		 */
 		public static function put( $id, $value )
 		{
-			if(file_exists(__BUILD_PATH__))
+			$file = self::getPath( $id );
+			$value = \serialize( $value );
+
+			$fp = @fopen( $file, 'wb+' );
+			if( $fp )
 			{
-				$file = self::getPath( $id );
-				$value = \serialize( $value );
+				if( self::$verbose ) echo "Rebuilding {$file}\r\n";
 
-				$fp = @fopen( $file, 'wb+' );
-				if( $fp )
+				if( fwrite( $fp, $value, strlen( $value )) !== false )
 				{
-					if( self::$verbose ) echo "Rebuilding {$file}\r\n";
-
-					if( fwrite( $fp, $value, strlen( $value )) !== false )
-					{
-						fclose( $fp );
-					}
-					else
-					{
-						throw new \Exception("Could not write to build file {$file}");
-					}
+					fclose( $fp );
+				}
+				else
+				{
+					throw new \System\Utils\FileNotWritableException("Could not write to `{$file}`, check that directory " . __BUILD_PATH__ . " is writable");
 				}
 			}
 			else
 			{
-				mkdir(__BUILD_PATH__);
+				throw new \System\Utils\DirectoryNotFoundException("Could not open file `{$file}` for output, check that directory " . __BUILD_PATH__ . " exists");
 			}
 		}
 
