@@ -30,19 +30,19 @@
      * build number
      * @var string
      */
-	const FRAMEWORK_BUILD_NUMBER = '201302211413';
+	const FRAMEWORK_BUILD_NUMBER = '201302221500';
 
     /**
      * build date
      * @var string
      */
-	const FRAMEWORK_BUILD_TIME = '21 Feb 13';
+	const FRAMEWORK_BUILD_TIME = '22 Feb 13';
 
     /**
      * build time
      * @var string
      */
-	const FRAMEWORK_BUILD_DATE = '14:13:21 MST';
+	const FRAMEWORK_BUILD_DATE = '15:00:59 MST';
 
     /**
      * framework authors
@@ -54,11 +54,11 @@
      * framework version string
      * @var string
      */
-	const FRAMEWORK_VERSION_STRING = '6.4.16 (Build 201302211413)';
+	const FRAMEWORK_VERSION_STRING = '6.4.16 (Build 201302221500)';
 
     /**
      * framework date string
      * @var string
      */
-	const FRAMEWORK_DATE_STRING = 'last build on 21 Feb 13 at 14:13:21 MST';
+	const FRAMEWORK_DATE_STRING = 'last build on 22 Feb 13 at 15:00:59 MST';
 ?>
