@@ -315,7 +315,7 @@
 			$response = new \System\Web\HTTPResponse(); // start output buffer
 
 			// check if error code is mapped to controller
-			if( !isset( $this->config->errors[$statuscode] ) || $this->requestHandler instanceof Services\WebServiceBase )
+			if( !isset( $this->config->errors[$statuscode] ) || false === strpos($_SERVER["HTTP_ACCEPT"], 'text/html'))
 			{
 				$response->statusCode = $statuscode;
 			}
@@ -914,17 +914,15 @@ ExceptionWindow.document.write(\"".addslashes(str_replace(array("\r\n", "\r", "\
 
 			if( $this->config->sessionTimeout > 0 )
 			{
-				if(!isset($this->session[$this->applicationId.'_timeout']))
-				{
-					$this->session[$this->applicationId.'_timeout'] = time() + $this->config->sessionTimeout;
-				}
-				else
+				if(isset($this->session[$this->applicationId.'_timeout']))
 				{
 					if($this->session[$this->applicationId.'_timeout'] < time())
 					{
 						$this->session->destroy();
 					}
 				}
+
+				$this->session[$this->applicationId.'_timeout'] = time() + $this->config->sessionTimeout;
 			}
 		}
 
